Fixes problems with signatures overflowing?

--- a/style/components/topic/topic.scss
+++ b/style/components/topic/topic.scss
@@ -96,6 +96,16 @@ $border-color: rgba(255, 255, 255, 0.1);
 
             .post-content-signature {
                 border-top: 0.5px solid rgba(255, 255, 255, 0.3);
+
+                a {
+                    text-decoration: underline;
+                }
+
+                * {
+                    max-width: 100%;
+                    width: auto;
+                    height: auto;
+                }
             }
 
             .memes {
